syntax = "proto3";

package example.files.v1;

import "google/api/http.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "grpc/gateway/protoc_gen_openapiv2/options/annotations.proto";

option go_package = "github.com/EmptyShadow/go-examples/grpc-files/pb/files/v1;files";

service FilesService {
    rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse) {
        option (google.api.http) = {
            post: "/v1/files";
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Upload file to remote file system.";
            consumes: "multipart/form-data";
            produces: "application/json";
        };
    };

    rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse)  {
        option (google.api.http) = {
            get: "/v1/files/{name}";
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Download file to remote file system.";
            produces: "multipart/form-data";
            consumes: "application/json";
        };
    };
}

message UploadFileRequest {
    message Info {
        string name = 1;
    }

    oneof data {
        Info file_info = 1;
        bytes file_content_chunk = 2;
    };
}

message UploadFileResponse {
    FileHeader file_header = 1;
}

message DownloadFileRequest {
    string name = 1;
}

message DownloadFileResponse {
    oneof data {
        FileHeader file_header = 1;
        bytes file_content_chunk = 2;
    };
}

message FileHeader {
    string name = 1;
    string content_type = 2;
    uint64 size = 3;
}
